package com.collectpro.backend.enums;

public enum RoleType {
    SUPER_ADMIN,
    ADMIN_PRINCIPAL,
    ADMIN_SECONDAIRE,
    SUPERVISOR,
    AGENT
}