package com.collectpro.backend.enums;

public enum UserStatus {
    INVITED,
    ACTIVE,
    DISABLED
}